--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>CNDS</title>
+    <title>NFQL</title>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <link rel="stylesheet" href="stylesheets/styles.css">
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <ul>
-          <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/vbajpai/nfql">Fork on<strong>GitHub</strong></a></li>
         </ul>
       </header>
 	  <script>
@@ -29,7 +29,7 @@
 	    <img src="images/ajax-loader.gif" alt="loading" />
       </section>
       <footer>
-        <p><small>Hosted on CNDS<br/>
+        <p><small>Hosted on Github<br/>
         Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
