* updated blog to point to blog.nfql.vaibhavbajpai.com

--- a/INDEX.md.html
+++ b/INDEX.md.html
@@ -11,6 +11,8 @@
 <li><a href="install-osx-homebrew.html">Mac OS X using Homebrew →</a></li>
 <li><a href="install-osx-macports.html">Mac OS X using Mac Ports →</a></li>
 </ul>
+<h3 id="development-blog">Development Blog</h3>
+<p>A development blog discussing the internal details is <a href="http://blog.nfql.vaibhavbajpai.com">here →</a></p>
 <h3 id="publications">Publications</h3>
 <p><a href="http://www.springerlink.com/content/2t0mv427lk824224/">Flow-based Identification of Failures Caused by IPv6 Transition Mechanisms →</a><br />Vaibhav Bajpai, Nikolay Melnikov, Anuj Sehgal, Jürgen Schönwälder<br />AIMS 2012, Luxembourg, June 2012</p>
 <p><a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=5990668">Flow Signatures of Popular Applications →</a><br />Vladislav Perelman, Nikolay Melnikov, Jürgen Schönwälder<br />IM 2011, Dublin, May 2011.</p>
@@ -33,8 +35,6 @@
 <p><a href="http://cnds.eecs.jacobs-university.de/slides/2010-aims-cybermetrics.pdf">Cybermetrics: User Identiﬁcation through Network Flow Analysis →</a><br />Nikolay Melnikov, Jürgen Schönwälder<br />AIMS 2010, Zurich, June 2010.</p>
 <p><a href="http://cnds.eecs.jacobs-university.de/slides/2010-aims-flowy-implementation.pdf">Implementation of a Stream-Based IP Flow Record Query Language →</a><br />Kaloyan Kanev, Nikolay Melnikov, Jürgen Schönwälder<br />AIMS 2010, Zurich, June 2010.</p>
 <p><a href="http://cnds.eecs.jacobs-university.de/slides/2009-dsom-flow-query.pdf">Design of a Stream-Based IP Flow Record Query Language →</a><br />Vladislav Marinov, Jürgen Schönwälder<br />DSOM 2009, Venice, October 2009.</p>
-<h3 id="development-blog">Development Blog</h3>
-<p>A development blog discussing the internal details is <a href="http://mthesis.vaibhavbajpai.com">here →</a></p>
 <h3 id="releases">Releases</h3>
 <p>Earlier releases of NFQL can be downloaded from <a href="releases.html">here →</a></p>
 <h3 id="contributors">Contributors</h3>
