added NFQL publication in nfql.vaibhavbajpai.com

--- a/INDEX.md.html
+++ b/INDEX.md.html
@@ -14,6 +14,7 @@
 <h3 id="development-blog">Development Blog</h3>
 <p>A development blog discussing the internal details is <a href="http://blog.nfql.vaibhavbajpai.com">here →</a></p>
 <h3 id="publications">Publications</h3>
+<p><a href="http://www.vaibhavbajpai.com/documents/papers/proceedings/nfql-im-2013.pdf">NFQL: An Efficient Tool for Querying Network Flow Records →</a><br />Vaibhav Bajpai, Johannes Schauer, Jürgen Schönwälder<br />IM 2013, Ghent, May 2013</p>
 <p><a href="http://www.springerlink.com/content/2t0mv427lk824224/">Flow-based Identification of Failures Caused by IPv6 Transition Mechanisms →</a><br />Vaibhav Bajpai, Nikolay Melnikov, Anuj Sehgal, Jürgen Schönwälder<br />AIMS 2012, Luxembourg, June 2012</p>
 <p><a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=5990668">Flow Signatures of Popular Applications →</a><br />Vladislav Perelman, Nikolay Melnikov, Jürgen Schönwälder<br />IM 2011, Dublin, May 2011.</p>
 <p><a href="http://www.springerlink.com/content/l85hk73487086024/">Cybermetrics: User Identiﬁcation through Network Flow Analysis →</a><br />Nikolay Melnikov, Jürgen Schönwälder AIMS 2010, Zurich, June 2010.</p>
