- added nfql ietf 87 talk - added prodescu as one of the contributors

--- a/INDEX.md.html
+++ b/INDEX.md.html
@@ -30,6 +30,7 @@
 <p><a href="http://cnds.eecs.jacobs-university.de/archive/msc-2009-kkanev.pdf">Flowy - Network Flow Analysis Application →</a><br />Kaloyan Kanev, Masters Thesis, August 2009.</p>
 <p><a href="http://cnds.eecs.jacobs-university.de/archive/msc-2009-vmarinov.pdf">Design of an IP Flow Record Query Language →</a><br />Vladislav Marinov, Masters Thesis, August 2009.</p>
 <h3 id="talks">Talks</h3>
+<p><a href="http://vaibhavbajpai.com/documents/talks/nfql-ietf87-2013.pdf">NFQL: A Tool for Querying Network Flow Records →</a><br />Vaibhav Bajpai, Johannes Schauer, Corneliu Claudiu Prodescu, Jürgen Schönwälder<br />NetFlow/IPFIX NMRG Workshop, IETF 87, Berlin, July 2013</p>
 <p><a href="http://www.vaibhavbajpai.com/documents/talks/nfql-im-2013.pdf">NFQL: A Tool for Querying Network Flow Records →</a><br />Vaibhav Bajpai, Johannes Schauer, Jürgen Schönwälder<br />IM 2013, Ghent, May 2013</p>
 <p><a href="http://cnds.eecs.jacobs-university.de/slides/2012-aims-ipv6transeval.pdf">Flow-based Identification of Failures Caused by IPv6 Transition Mechanisms →</a><br />Vaibhav Bajpai, Nikolay Melnikov, Anuj Sehgal, Jürgen Schönwälder<br />AIMS 2012, Luxembourg, June 2012</p>
 <p><a href="http://cnds.eecs.jacobs-university.de/slides/2011-im-flow-signatures.pdf">Flow signatures of Popular Applications →</a><br />Vladislav Perelman, Nikolay Melnikov, Jürgen Schönwälder<br />IM 2011, Dublin, May 2011.</p>
@@ -41,8 +42,9 @@
 <p>Earlier releases of NFQL can be downloaded from <a href="releases.html">here →</a></p>
 <h3 id="contributors">Contributors</h3>
 <ul>
-<li>Vaibhav Bajpai <a href="contact@vaibhavbajpai.com">contact@vaibhavbajpai.com</a></li>
-<li>Johannes Schauer <a href="j.schauer@email.de">j.schauer@email.de</a></li>
+<li>Vaibhav Bajpai <a href="contact@vaibhavbajpai.com">contact@vaibhavbajpai.com</a><br /></li>
+<li>Johannes Schauer <a href="j.schauer@email.de">j.schauer@email.de</a><br /></li>
+<li>Corneliu Claudiu Prodescu <a href="c.prodescu@jacobs-university.de">c.prodescu@jacobs-university.de</a><br /></li>
 <li>Kaloyan Kanev <a href="k.kanev@jacobs-university.de">k.kanev@jacobs-university.de</a></li>
 <li>Vladislav Marinov <a href="v.marinov@jacobs-university.de">v.marinov@jacobs-university.de</a></li>
 <li>Vladislav Perelman <a href="v.perelman@jacobs-university.de">v.perelman@jacobs-university.de</a></li>
