updated the installation and usage pages with correct github link

--- a/install-osx-homebrew.html
+++ b/install-osx-homebrew.html
@@ -15,11 +15,11 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>
-        <ul>
-          <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
-        </ul>
-      </header>
+    <header>
+      <ul>
+        <li><a href="https://github.com/vbajpai/nfql">Fork on<strong>GitHub</strong></a></li>
+      </ul>
+    </header>
 	  <script>
 		$(document).ready(function() {
 			$("#install-osx-homebrew").load("INSTALL-OSX-HOMEBREW.md.html");
