--- a/install-debian.html
+++ b/install-debian.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <ul>
-          <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/vbajpai/nfql">Fork on<strong>GitHub</strong></a></li>
         </ul>
       </header>
 	  <script>
