--- a/INSTALL-OSX-MACPORTS.md.html
+++ b/INSTALL-OSX-MACPORTS.md.html
@@ -8,7 +8,7 @@
 <p>Build the Execution Engine</p>
 <pre><code>[engine] $ make CMAKE_PREFIX_PATH=/opt/local</code></pre>
 <p>Generate Documentation (optional)</p>
-<p>[engine] $ make doc</p>
+<pre><code>[engine] $ make doc</code></pre>
 <h4 id="running-the-execution-engine">Running the Execution Engine</h4>
 <p>Example queries are available in <code>examples/</code> along with sample traces.</p>
 <pre><code>[engine] $ bin/engine examples/query-http-tcp-session.json examples/trace-2009.ftz</code></pre>
