added instructions on how to compile on FEDORA linux

--- a/INDEX.md.html
+++ b/INDEX.md.html
@@ -8,6 +8,7 @@
 <h3 id="installation-and-usage">Installation and Usage</h3>
 <ul>
 <li><a href="install-debian.html">Debian-based Linux →</a></li>
+<li><a href="install-fedora.html">Fedora Linux →</a></li>
 <li><a href="install-osx-homebrew.html">Mac OS X using Homebrew →</a></li>
 <li><a href="install-osx-macports.html">Mac OS X using Mac Ports →</a></li>
 </ul>
