added instructions on how to compile on FREEBSD

--- a/INDEX.md.html
+++ b/INDEX.md.html
@@ -11,6 +11,7 @@
 <li><a href="install-fedora.html">Fedora Linux →</a></li>
 <li><a href="install-osx-homebrew.html">Mac OS X using Homebrew →</a></li>
 <li><a href="install-osx-macports.html">Mac OS X using Mac Ports →</a></li>
+<li><a href="install-freebsd.html">FreeBSD →</a></li>
 </ul>
 <h3 id="development-blog">Development Blog</h3>
 <p>A development blog discussing the internal details is <a href="http://blog.nfql.vaibhavbajpai.com">here →</a></p>
