added TNSM paper

--- a/INDEX.md.html
+++ b/INDEX.md.html
@@ -40,41 +40,84 @@
 <li><a href="install-freebsd.html">FreeBSD →</a></li>
 </ul>
 <h3 id="publications">Publications</h3>
-<p><a href="http://www.vaibhavbajpai.com/documents/papers/proceedings/nfql-im-2013.pdf">NFQL: A Tool for Querying Network Flow Records →</a><br />Vaibhav Bajpai, Johannes Schauer, Jürgen Schönwälder<br />IM 2013, Ghent, May 2013</p>
-<p><a href="http://www.springerlink.com/content/2t0mv427lk824224/">Flow-based Identification of Failures Caused by IPv6 Transition Mechanisms →</a><br />Vaibhav Bajpai, Nikolay Melnikov, Anuj Sehgal, Jürgen Schönwälder<br />AIMS 2012, Luxembourg, June 2012</p>
-<p><a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=5990668">Flow Signatures of Popular Applications →</a><br />Vladislav Perelman, Nikolay Melnikov, Jürgen Schönwälder<br />IM 2011, Dublin, May 2011.</p>
-<p><a href="http://www.springerlink.com/content/l85hk73487086024/">Cybermetrics: User Identiﬁcation through Network Flow Analysis →</a><br />Nikolay Melnikov, Jürgen Schönwälder AIMS 2010, Zurich, June 2010.</p>
-<p><a href="http://www.springerlink.com/content/a565783288655j67">Implementation of a Stream-Based IP Flow Record Query Language →</a><br />Kaloyan Kanev, Nikolay Melnikov, Jürgen Schönwälder<br />AIMS 2010, Zurich, June 2010.</p>
-<p><a href="http://www.springerlink.com/content/j4555jj848l8q862/">Design of a Stream-Based IP Flow Record Query Language →</a><br />Vladislav Marinov, Jürgen Schönwälder<br />DSOM 2009, Venice, October 2009.</p>
-<p><a href="http://www.springerlink.com/content/0m76rk7653872426/">Design of an IP Flow Record Query Language →</a><br />Vladislav Marinov, Jürgen Schönwälder<br />AIMS 2008, Bremen, July 2008.</p>
+<p><a href="http://vaibhavbajpai.com/documents/papers/proceedings/nfql-tnsm-2017.pdf">Network Flow Query Lanauage - Design, Implementation, Performance and Applications →</a><br />
+Vaibhav Bajpai, Jürgen Schönwälder<br />
+TNSM 2017, XXX 2017</p>
+<p><a href="http://www.vaibhavbajpai.com/documents/papers/proceedings/nfql-im-2013.pdf">NFQL: A Tool for Querying Network Flow Records →</a><br />
+Vaibhav Bajpai, Johannes Schauer, Jürgen Schönwälder<br />
+IM 2013, Ghent, May 2013</p>
+<p><a href="http://www.springerlink.com/content/2t0mv427lk824224/">Flow-based Identification of Failures Caused by IPv6 Transition Mechanisms →</a><br />
+Vaibhav Bajpai, Nikolay Melnikov, Anuj Sehgal, Jürgen Schönwälder<br />
+AIMS 2012, Luxembourg, June 2012</p>
+<p><a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=5990668">Flow Signatures of Popular Applications →</a><br />
+Vladislav Perelman, Nikolay Melnikov, Jürgen Schönwälder<br />
+IM 2011, Dublin, May 2011.</p>
+<p><a href="http://www.springerlink.com/content/l85hk73487086024/">Cybermetrics: User Identiﬁcation through Network Flow Analysis →</a><br />
+Nikolay Melnikov, Jürgen Schönwälder AIMS 2010, Zurich, June 2010.</p>
+<p><a href="http://www.springerlink.com/content/a565783288655j67">Implementation of a Stream-Based IP Flow Record Query Language →</a><br />
+Kaloyan Kanev, Nikolay Melnikov, Jürgen Schönwälder<br />
+AIMS 2010, Zurich, June 2010.</p>
+<p><a href="http://www.springerlink.com/content/j4555jj848l8q862/">Design of a Stream-Based IP Flow Record Query Language →</a><br />
+Vladislav Marinov, Jürgen Schönwälder<br />
+DSOM 2009, Venice, October 2009.</p>
+<p><a href="http://www.springerlink.com/content/0m76rk7653872426/">Design of an IP Flow Record Query Language →</a><br />
+Vladislav Marinov, Jürgen Schönwälder<br />
+AIMS 2008, Bremen, July 2008.</p>
 <h3 id="thesis">Thesis</h3>
-<p><a href="http://cnds.eecs.jacobs-university.de/archive/bsc-2013-dmorina.pdf">NFQL Front-End Parser →</a><br />Durim Morina, Bachelors Thesis, May 2013.</p>
-<p><a href="http://cnds.eecs.jacobs-university.de/archive/msc-2012-vbajpai.pdf">A Complete System Integration of the Network Flow Query Language →</a><br />Vaibhav Bajpai, Masters Thesis, August 2012.</p>
-<p><a href="http://cnds.eecs.jacobs-university.de/archive/bsc-2011-jschauer.pdf">Flowy 2.0: Fast Execution of Stream-based IP Flow Queries →</a><br />Johannes Schauer, Bachelors Thesis, May 2011.</p>
-<p><a href="http://cnds.eecs.jacobs-university.de/archive/msc-2010-nmelnikov.pdf">Cybermetrics: Identification of Users Through Network Flow Analysis →</a><br />Nikolay Melnikov, Masters Thesis, August 2010.</p>
-<p><a href="http://cnds.eecs.jacobs-university.de/archive/bsc-2010-vperelman.pdf">Flow Signatures of Popular Applications →</a><br />Vladislav Perelman, Bachelors Thesis, May 2010.</p>
-<p><a href="http://cnds.eecs.jacobs-university.de/archive/bsc-2010-pnemeth.pdf">Flowy improvements using MapReduce →</a><br />Peter Nemeth, Bachelors Thesis, May 2010.</p>
-<p><a href="http://cnds.eecs.jacobs-university.de/archive/msc-2009-kkanev.pdf">Flowy - Network Flow Analysis Application →</a><br />Kaloyan Kanev, Masters Thesis, August 2009.</p>
-<p><a href="http://cnds.eecs.jacobs-university.de/archive/msc-2009-vmarinov.pdf">Design of an IP Flow Record Query Language →</a><br />Vladislav Marinov, Masters Thesis, August 2009.</p>
+<p><a href="http://cnds.eecs.jacobs-university.de/archive/bsc-2013-dmorina.pdf">NFQL Front-End Parser →</a><br />
+Durim Morina, Bachelors Thesis, May 2013.</p>
+<p><a href="http://cnds.eecs.jacobs-university.de/archive/msc-2012-vbajpai.pdf">A Complete System Integration of the Network Flow Query Language →</a><br />
+Vaibhav Bajpai, Masters Thesis, August 2012.</p>
+<p><a href="http://cnds.eecs.jacobs-university.de/archive/bsc-2011-jschauer.pdf">Flowy 2.0: Fast Execution of Stream-based IP Flow Queries →</a><br />
+Johannes Schauer, Bachelors Thesis, May 2011.</p>
+<p><a href="http://cnds.eecs.jacobs-university.de/archive/msc-2010-nmelnikov.pdf">Cybermetrics: Identification of Users Through Network Flow Analysis →</a><br />
+Nikolay Melnikov, Masters Thesis, August 2010.</p>
+<p><a href="http://cnds.eecs.jacobs-university.de/archive/bsc-2010-vperelman.pdf">Flow Signatures of Popular Applications →</a><br />
+Vladislav Perelman, Bachelors Thesis, May 2010.</p>
+<p><a href="http://cnds.eecs.jacobs-university.de/archive/bsc-2010-pnemeth.pdf">Flowy improvements using MapReduce →</a><br />
+Peter Nemeth, Bachelors Thesis, May 2010.</p>
+<p><a href="http://cnds.eecs.jacobs-university.de/archive/msc-2009-kkanev.pdf">Flowy - Network Flow Analysis Application →</a><br />
+Kaloyan Kanev, Masters Thesis, August 2009.</p>
+<p><a href="http://cnds.eecs.jacobs-university.de/archive/msc-2009-vmarinov.pdf">Design of an IP Flow Record Query Language →</a><br />
+Vladislav Marinov, Masters Thesis, August 2009.</p>
 <h3 id="talks">Talks</h3>
-<p><a href="http://vaibhavbajpai.com/documents/talks/nfql-ietf87-2013.pdf">NFQL: A Tool for Querying Network Flow Records →</a><br />Vaibhav Bajpai, Johannes Schauer, Corneliu Claudiu Prodescu, Jürgen Schönwälder<br />NetFlow/IPFIX NMRG Workshop, IETF 87, Berlin, July 2013</p>
-<p><a href="http://www.vaibhavbajpai.com/documents/talks/nfql-im-2013.pdf">NFQL: A Tool for Querying Network Flow Records →</a><br />Vaibhav Bajpai, Johannes Schauer, Jürgen Schönwälder<br />IM 2013, Ghent, May 2013</p>
-<p><a href="http://cnds.eecs.jacobs-university.de/slides/2012-aims-ipv6transeval.pdf">Flow-based Identification of Failures Caused by IPv6 Transition Mechanisms →</a><br />Vaibhav Bajpai, Nikolay Melnikov, Anuj Sehgal, Jürgen Schönwälder<br />AIMS 2012, Luxembourg, June 2012</p>
-<p><a href="http://cnds.eecs.jacobs-university.de/slides/2011-im-flow-signatures.pdf">Flow signatures of Popular Applications →</a><br />Vladislav Perelman, Nikolay Melnikov, Jürgen Schönwälder<br />IM 2011, Dublin, May 2011.</p>
-<p><a href="http://cnds.eecs.jacobs-university.de/slides/2010-ietf-78-nmrg-app-signatures.pdf">Flow Signatures of Popular Applications →</a><br />Nikolay Melnikov<br />78th IETF, Maastricht, July 2010.</p>
-<p><a href="http://cnds.eecs.jacobs-university.de/slides/2010-aims-cybermetrics.pdf">Cybermetrics: User Identiﬁcation through Network Flow Analysis →</a><br />Nikolay Melnikov, Jürgen Schönwälder<br />AIMS 2010, Zurich, June 2010.</p>
-<p><a href="http://cnds.eecs.jacobs-university.de/slides/2010-aims-flowy-implementation.pdf">Implementation of a Stream-Based IP Flow Record Query Language →</a><br />Kaloyan Kanev, Nikolay Melnikov, Jürgen Schönwälder<br />AIMS 2010, Zurich, June 2010.</p>
-<p><a href="http://cnds.eecs.jacobs-university.de/slides/2009-dsom-flow-query.pdf">Design of a Stream-Based IP Flow Record Query Language →</a><br />Vladislav Marinov, Jürgen Schönwälder<br />DSOM 2009, Venice, October 2009.</p>
+<p><a href="http://vaibhavbajpai.com/documents/talks/nfql-ietf87-2013.pdf">NFQL: A Tool for Querying Network Flow Records →</a><br />
+Vaibhav Bajpai, Johannes Schauer, Corneliu Claudiu Prodescu, Jürgen Schönwälder<br />
+NetFlow/IPFIX NMRG Workshop, IETF 87, Berlin, July 2013</p>
+<p><a href="http://www.vaibhavbajpai.com/documents/talks/nfql-im-2013.pdf">NFQL: A Tool for Querying Network Flow Records →</a><br />
+Vaibhav Bajpai, Johannes Schauer, Jürgen Schönwälder<br />
+IM 2013, Ghent, May 2013</p>
+<p><a href="http://cnds.eecs.jacobs-university.de/slides/2012-aims-ipv6transeval.pdf">Flow-based Identification of Failures Caused by IPv6 Transition Mechanisms →</a><br />
+Vaibhav Bajpai, Nikolay Melnikov, Anuj Sehgal, Jürgen Schönwälder<br />
+AIMS 2012, Luxembourg, June 2012</p>
+<p><a href="http://cnds.eecs.jacobs-university.de/slides/2011-im-flow-signatures.pdf">Flow signatures of Popular Applications →</a><br />
+Vladislav Perelman, Nikolay Melnikov, Jürgen Schönwälder<br />
+IM 2011, Dublin, May 2011.</p>
+<p><a href="http://cnds.eecs.jacobs-university.de/slides/2010-ietf-78-nmrg-app-signatures.pdf">Flow Signatures of Popular Applications →</a><br />
+Nikolay Melnikov<br />
+78th IETF, Maastricht, July 2010.</p>
+<p><a href="http://cnds.eecs.jacobs-university.de/slides/2010-aims-cybermetrics.pdf">Cybermetrics: User Identiﬁcation through Network Flow Analysis →</a><br />
+Nikolay Melnikov, Jürgen Schönwälder<br />
+AIMS 2010, Zurich, June 2010.</p>
+<p><a href="http://cnds.eecs.jacobs-university.de/slides/2010-aims-flowy-implementation.pdf">Implementation of a Stream-Based IP Flow Record Query Language →</a><br />
+Kaloyan Kanev, Nikolay Melnikov, Jürgen Schönwälder<br />
+AIMS 2010, Zurich, June 2010.</p>
+<p><a href="http://cnds.eecs.jacobs-university.de/slides/2009-dsom-flow-query.pdf">Design of a Stream-Based IP Flow Record Query Language →</a><br />
+Vladislav Marinov, Jürgen Schönwälder<br />
+DSOM 2009, Venice, October 2009.</p>
 <h3 id="contributors">Contributors</h3>
 <ul>
-<li>Vaibhav Bajpai <a href="contact@vaibhavbajpai.com">contact@vaibhavbajpai.com</a><br /></li>
-<li>Johannes Schauer <a href="j.schauer@email.de">j.schauer@email.de</a><br /></li>
-<li>Corneliu Claudiu Prodescu <a href="c.prodescu@jacobs-university.de">c.prodescu@jacobs-university.de</a><br /></li>
-<li>Kaloyan Kanev <a href="k.kanev@jacobs-university.de">k.kanev@jacobs-university.de</a></li>
-<li>Vladislav Marinov <a href="v.marinov@jacobs-university.de">v.marinov@jacobs-university.de</a></li>
-<li>Vladislav Perelman <a href="v.perelman@jacobs-university.de">v.perelman@jacobs-university.de</a></li>
-<li>Nikolay Melnikov <a href="n.melnikov@jacobs-university.de">n.melnikov@jacobs-university.de</a></li>
-<li>Jürgen Schönwälder <a href="j.schoenwaelder@jacobs-university.de">j.schoenwaelder@jacobs-university.de</a></li>
+<li>Vaibhav Bajpai <a href="contact@vaibhavbajpai.com" class="uri">contact@vaibhavbajpai.com</a><br />
+</li>
+<li>Johannes Schauer <a href="j.schauer@email.de" class="uri">j.schauer@email.de</a><br />
+</li>
+<li>Corneliu Claudiu Prodescu <a href="c.prodescu@jacobs-university.de" class="uri">c.prodescu@jacobs-university.de</a><br />
+</li>
+<li>Kaloyan Kanev <a href="k.kanev@jacobs-university.de" class="uri">k.kanev@jacobs-university.de</a></li>
+<li>Vladislav Marinov <a href="v.marinov@jacobs-university.de" class="uri">v.marinov@jacobs-university.de</a></li>
+<li>Vladislav Perelman <a href="v.perelman@jacobs-university.de" class="uri">v.perelman@jacobs-university.de</a></li>
+<li>Nikolay Melnikov <a href="n.melnikov@jacobs-university.de" class="uri">n.melnikov@jacobs-university.de</a></li>
+<li>Jürgen Schönwälder <a href="j.schoenwaelder@jacobs-university.de" class="uri">j.schoenwaelder@jacobs-university.de</a></li>
 </ul>
 <h3 id="history">History</h3>
 <p>Flowy was a first feature complete Python prototype of NFQL. Due to performance problems, it was superseeded by a complete rewrite in C, called Flowy 2.0. <code>nfql</code> extends on Flowy 2.0, making it feature complete. The execution engine has been optimized with crispier algorithms to make it scale to real-world sized traces. <code>nfql</code> now has comparable execution times to contemporary flow analysis tools.</p>
@@ -103,5 +146,3 @@
  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
  THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 </pre>
-
-
