--- a/INDEX.md.html
+++ b/INDEX.md.html
@@ -42,7 +42,7 @@
 <h3 id="publications">Publications</h3>
 <p><a href="http://vaibhavbajpai.com/documents/papers/proceedings/nfql-tnsm-2017.pdf">Network Flow Query Language - Design, Implementation, Performance and Applications →</a><br />
 Vaibhav Bajpai, Jürgen Schönwälder<br />
-TNSM 2017, XXX 2017</p>
+TNSM 2017, March 2017</p>
 <p><a href="http://www.vaibhavbajpai.com/documents/papers/proceedings/nfql-im-2013.pdf">NFQL: A Tool for Querying Network Flow Records →</a><br />
 Vaibhav Bajpai, Johannes Schauer, Jürgen Schönwälder<br />
 IM 2013, Ghent, May 2013</p>
